--- a/templates/users.html
+++ b/templates/users.html
@@ -18,6 +18,7 @@
   <td><strong>Nombre</strong></td>
   <td><strong>Apellido</strong></td>
   <td><strong>Usuario</strong></td>
+  <td><strong>Email</strong></td>
   <td><strong>Estado</strong></td>
 </tr>
   {% for item in users %}
@@ -25,6 +26,7 @@
     <td>{{ item.first_name }}</td>
     <td>{{ item.last_name }}</td>
     <td>{{ item.username }}</td>
+    <td>{{ item.email }}</td>
     {% if item.active == 1 %}
       <td> Activo </td>
     {% elseif item.active == 0%}
