Se cambió users_list por user_index, y user_create por user_new

--- a/templates/administracion.html
+++ b/templates/administracion.html
@@ -8,7 +8,7 @@
   <div class="dropdown"> 
     <button class="dropbtn">Administracion&darr;</button>
       <div class= " dropdown-content" >
-          <a href="./?action=users_list">Usuarios</a> 
+          <a href="./?action=users_index">Usuarios</a> 
           <a href="#Roles">Roles</a> 
           <a href="#Permisos">Permisos</a> 
       </div>
