--- a/templates/login.html
+++ b/templates/login.html
@@ -22,8 +22,8 @@
           </div>
 
       </form>
-    
-      <form action="./?action=user_create" method="post">
+    <br>
+      <form action="./?action=user_new" method="post">
           <button type= "submit" id='btnSubmit'> Boton de prueba - alta usuario </button>
       </form>
   </div>
