mejoras en el listado de usuarios

--- a/templates/plantilla_base.html
+++ b/templates/plantilla_base.html
@@ -16,11 +16,8 @@
       LOGO |  <a href="./?action=index" class='link1'>Hospital Dr. Ricardo Gutiérrez</a>
       {% block nav %}   {% endblock %}
       <div class="search-container">
-          <form action="#" id="searchform">
-              <input type="text" placeholder="Buscar aqu&iacute;..." name="busqueda" id="busqueda" title="busqueda">
-               <button type= "submit" id='btnSubmit'> Buscar </button>
-               <a href="./?action=login" class='link1'> LOGIN </a>
-          </form>
+          <a href="./?action=login" class='link1'> LOGIN </a>
+      </div>
          <div id="dropdown"> 
           {% block dropdown %} 
           {% endblock %} 
