Me olvide: se elimino la barra de navegacion, ahora se tiene un buscador especifico para usuarios, pacientes, etc. Se arreglo la redireccion del boton Crear Usuario.

--- a/templates/user_new.html
+++ b/templates/user_new.html
@@ -59,7 +59,7 @@
 
                         <div class="form-group">
                             <div class="col-md-12 text-center">
-                                <button type="submit" class="btn btn-primary btn-lg">Crear usuario</button>
+                                <button type="submit"  id='btnSubmit'>Crear usuario</button>
                             </div>
                         </div>
                     </fieldset>
