--- a/templates/user_new.html
+++ b/templates/user_new.html
@@ -4,69 +4,64 @@
 
 {% block body %}
 
-<h1 align="center">   </h1>
 <div id="alta-usuario" align="center">
 
-
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="well well-sm">
-                <form class="form-horizontal" method="post">
-                    <fieldset>
-                        <legend class="text-center header">Ingreso de nuevo usuario</legend>
-
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
-                            <div class="col-md-8">
-                                <input id="fname" name="name" type="text" placeholder="Nombre" class="form-control">
+<form action="./?action=user_added" method='post'>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="well well-sm">
+                    <form class="form-horizontal" method="post">
+                        <fieldset>
+                            <legend class="text-center header">Ingreso de nuevo usuario</legend>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
+                                <div class="col-md-8">
+                                    <input id="first_name" name="first_name" type="text" placeholder="Nombre" class="form-control" required >
+                                </div>
                             </div>
-                        </div>
-                        <br>
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
-                            <div class="col-md-8">
-                                <input id="lname" name="name" type="text" placeholder="Apellido" class="form-control">
+                            <br>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
+                                <div class="col-md-8">
+                                    <input id="last_name" name="last_name" type="text" placeholder="Apellido" class="form-control" required>
+                                </div>
                             </div>
-                        </div>
-                        <br>
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
-                            <div class="col-md-8">
-                                <input id="email" name="email" type="text" placeholder="Email" class="form-control">
+                            <br>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                                <div class="col-md-8">
+                                    <input id="email" name="email" type="text" placeholder="Email" class="form-control" required>
+                                </div>
                             </div>
-                        </div>
-
-                        <br>
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-phone-square bigicon"></i></span>
-                            <div class="col-md-8">
-                                <input id="phone" name="phone" type="text" placeholder="Tel&eacute;fono" class="form-control">
+                    
+                            <br>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
+                                <div class="col-md-8">
+                                    <input id="username" name="username" type="text" placeholder="Usuario" class="form-control" required>
+                                </div>
                             </div>
-                        </div>
-
-                        <br>
-                        <!--
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-pencil-square-o bigicon"></i></span>
-                            <div class="col-md-8">
-                                <textarea class="form-control" id="message" name="message" placeholder="Enter your massage for us here. We will get back to you within 2 business days." rows="7"></textarea>
+                            <br>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                                <div class="col-md-8">
+                                    <input id="password" name="password" type="password" placeholder="Contrasena" class="form-control" required>
+                                </div>
                             </div>
-                        </div>
-                        
-                        <br>
-                    -->
-
-                        <div class="form-group">
-                            <div class="col-md-12 text-center">
-                                <button type="submit"  id='btnSubmit'>Crear usuario</button>
+                            <br>
+                          
+                            <div class="form-group">
+                                <div class="col-md-12 text-center">
+                                    <button type="submit"  id='btnSubmit'>Crear usuario</button>
+                                </div>
                             </div>
-                        </div>
-                    </fieldset>
-                </form>
+                        </fieldset>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</form>
 
 {% endblock %}
