cambie el nombre de la accion del boton modificar

--- a/templates/pacients_index.html
+++ b/templates/pacients_index.html
@@ -29,7 +29,7 @@
             <td>{{ item.address }}</td>
             <td>{{ item.phone }}</td>
             <td>  
-              <form action="./?action=paciente_update" method="post">
+              <form action="./?action=paciente_form_update" method="post">
                <input type="submit" action=class="btn btn-success" value="Modificar" id="boton_eliminar"/> 
               </form>
             </td>
