--- a/templates/pacients_index.html
+++ b/templates/pacients_index.html
@@ -83,12 +83,11 @@
               </form>
             </td>
             <td>  
-              <form action="./?action=paciente_destroy" method="post">
+              <form action="./?action=pacient_destroy" method="post">
               <input type="submit" class="btn btn-success" value="Eliminar" id="boton_borrar"/> </td>
             </tr>
 
         {% endfor %}
-
 
 </table>
 
