faltaba cerrar un form

--- a/templates/pacients_index.html
+++ b/templates/pacients_index.html
@@ -84,7 +84,9 @@
             </td>
             <td>  
               <form action="./?action=pacient_destroy" method="post">
-              <input type="submit" class="btn btn-success" value="Eliminar" id="boton_borrar"/> </td>
+              <input type="submit" class="btn btn-success" value="Eliminar" id="boton_borrar"/>
+              </form>
+               </td>
             </tr>
 
         {% endfor %}
