--- a/templates/administracion.html
+++ b/templates/administracion.html
@@ -4,7 +4,7 @@
 {% block title%}  Hospital Dr. Ricardo Gutierrez - Administración {% endblock %}
 
 {% block nav %}
-  <a href="./?action=pacient_index"  class="link1"> Pacientes</a>
+  <a href="./?action=pacients_index"  class="link1"> Pacientes</a>
   <div class="dropdown"> 
     <button class="dropbtn">Administracion&darr;</button>
       <div class= " dropdown-content" >
