--- a/templates/pacient_form_update.html
+++ b/templates/pacient_form_update.html
@@ -17,7 +17,7 @@
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
                                 <div class="col-md-8">
                                    Nombre:
-                                      <input id="first_name" name="first_name" type="text" placeholder="Nombre" value="{{ item.first_name }} "  class="form-control" required>
+                                      <input id="first_name" name="first_name" type="text" value="{{ pacient.first_name }} "  class="form-control" required>
                                 </div>
                             </div>
                             <br>
@@ -25,7 +25,7 @@
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
                                 <div class="col-md-8">
                                    Apellido:
-                                    <input id="last_name" name="last_name" type="text" placeholder="Apellido" value="last_name" class="form-control" required>
+                                    <input id="last_name" name="last_name" type="text" value="{{ pacient.last_name }} " class="form-control" required>
                                 </div>
                             </div>
                             <br>
@@ -33,7 +33,7 @@
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
                                 <div class="col-md-8">
                                    Fecha de Nacimiento:
-                                    <input id="fecha_de_nacimiento" name="birth_date" type="date" placeholder="Fecha de Nacimiento" value="birth_date" class="form-control" required>
+                                    <input id="fecha_de_nacimiento" name="birth_date" type="date" value=" {{ pacient.birth_date }}" class="form-control" required>
                                 </div>
                             </div>
                     
@@ -66,7 +66,7 @@
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
                                 <div class="col-md-8">
                                  Numero de Documento:
-                                   <input id="documento" name="dni" type="text" placeholder="N de Tipo Doc" value="dni" class="form-control" required>
+                                   <input id="documento" name="dni" type="text" value=" {{ pacient.dni }}" class="form-control" required>
                                 </div>
                             </div>
                             <br>
@@ -74,7 +74,7 @@
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
                                 <div class="col-md-8">
                                  Domicilio:
-                                   <input id="domicilio" name="address" type="text" placeholder="Direccion de Domicilio" value="address" class="form-control" required>
+                                   <input id="domicilio" name="address" type="text" value="{{ pacient.address}} " class="form-control" required>
                                 </div>
                             </div>
                             <br>
@@ -82,7 +82,7 @@
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
                                 <div class="col-md-8">
                                  Tel/Cel:
-                                   <input id="telefono" name="phone" type="text" placeholder="Telefono" value="phone" class="form-control" required>
+                                   <input id="telefono" name="phone" type="text" value="{{ pacient.phone }}" class="form-control" required>
                                 </div>
                             </div>
                             <br>
