--- a/templates/pacient_new.html
+++ b/templates/pacient_new.html
@@ -5,7 +5,7 @@
 {% block body %}
 
 <div id="alta-paciente" align="center">
-
+ <h1>Ingreso nuevo de paciente</h1>
 <form action="./?action=pacient_added" method='post'>
     <div class="container">
         <div class="row">
@@ -13,7 +13,7 @@
                 <div class="well well-sm">
                     <form class="form-horizontal" method="post">
                         <fieldset>
-                            <legend class="text-center header">Ingreso nuevo de paciente</legend>
+                           
                             <div class="form-group">
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
                                 <div class="col-md-8">
