--- a/templates/users_index.html
+++ b/templates/users_index.html
@@ -79,13 +79,14 @@
     {% endif %}
     <td>  
       <form action="./?action=user_form_update" method="post">
-        <input type="submit" class="btn btn-success" name="id" value="Modificar - id: {{ item.id }}"> 
+        <input type="submit" class="btn btn-success" name="id" value="Modificar"> 
         <input type="hidden" name="id" id="id" value= "{{ item.id }}">
       </form>
     </td>
    <td>  
-    <form action="./?action=user_destroy" method="post">
-      <input type="submit" class="btn btn-success" value="Eliminar" id="boton_borrar"/>
+    <form action="./?action=user_destroyed" method="post">
+      <input type="submit" onclick='confirm("Estás seguro?")' class="btn btn-success" value="Eliminar" id="boton_borrar"/>
+      <input type="hidden" name="id" id="id" value= "{{ item.id }}">
      </form>
     </td>
     <td> 
