--- a/templates/plantilla_base.html
+++ b/templates/plantilla_base.html
@@ -40,3 +40,11 @@
    <!-- esto va en todas las paginas -->
     </body>
 </html>
+
+<script type="text/javascript">
+function cancelar() {
+    if(confirm("¿Seguro que deseas cancelar?")) {
+        document.location.href= 'index.php';
+    }
+}
+</script>
