--- a/templates/user_added.html
+++ b/templates/user_added.html
@@ -1,9 +1,8 @@
 {% extends 'plantilla_base.html' %}
 {% block body %}
 
-
 <div class="alert alert-success">
-	Usuario creado exitosamente
+	Se creó el usuario correctamente.
 </div>
 
 {% endblock %}
