Cuando se agrega o elimina un usuario, se agregó un link para volver al listado inicial de usuarios

--- a/templates/user_added.html
+++ b/templates/user_added.html
@@ -2,7 +2,8 @@
 {% block body %}
 
 <div class="alert alert-success">
-	Se creó el usuario correctamente.
+	
+	Se creó el usuario correctamente. <a href="./?action=users_index"> Volver al listado de usuarios. </a>
 </div>
 
 {% endblock %}
