--- a/templates/user_destroyed.html
+++ b/templates/user_destroyed.html
@@ -5,7 +5,7 @@
 
 
 <div class="alert alert-success">
-	Se ha eliminado exitosamente el usuario.
+	Se ha eliminado exitosamente el usuario. <a href="./?action=users_index"> Volver al listado de usuarios. </a>
 </div>
 
 {% endblock %}
