--- a/templates/pacient_added.html
+++ b/templates/pacient_added.html
@@ -5,7 +5,7 @@
 
 
 <div class="alert alert-success">
-	Se ha agregado un paciente exitosamente
+	Se ha agregado un paciente exitosamente. <a href="./?action=pacients_index"> Volver al listado de pacientes. </a>
 </div>
 
 {% endblock %}
