--- a/templates/pacient_new.html
+++ b/templates/pacient_new.html
@@ -67,7 +67,7 @@
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
                                 <div class="col-md-8">
                                  Numero de Documento:
-                                   <input id="documento" name="dni" type="text" placeholder="N de Tipo Doc" class="form-control" required>
+                                   <input id="documento" name="dni" type="number" placeholder="N de Doc" class="form-control" required>
                                 </div>
                             </div>
                             <br>
