--- a/templates/user_form_update.html
+++ b/templates/user_form_update.html
@@ -10,20 +10,20 @@
             <div class="col-md-12">
                 <div class="well well-sm">
                         <fieldset>
-                            
+
                             <div class="form-group">
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
                                 <div class="col-md-8">
                                    Nombre:
-                                      <input id="first_name" name="first_name" type="text" class="form-control" required>
+                                      <input id="first_name" name="first_name" value={{ user.first_name }} type="text" class="form-control" required>
                                 </div>
                             </div>
-                            <br>  
+                            <br>
                             <div class="form-group">
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
                                 <div class="col-md-8">
                                   Apellido:
-                                    <input id="last_name" name="last_name" type="text" class="form-control" required>
+                                    <input id="last_name" name="last_name" value={{ user.last_name }} type="text" class="form-control" required>
                                 </div>
                             </div>
                             <br>
@@ -31,28 +31,28 @@
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
                                 <div class="col-md-8">
                                   E-mail:
-                                    <input id="email" name="email" type="text" class="form-control" required>
+                                    <input id="email" name="email" value={{ user.email }} type="text" class="form-control" required>
                                 </div>
                             </div>
-                    
                             <br>
                             <div class="form-group">
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
                                 <div class="col-md-8">
                                   Usuario:
-                                    <input id="username" name="username" type="text" class="form-control" required>
+                                    <input id="username" name="username" value={{ user.username }} type="text" class="form-control" required>
                                 </div>
                             </div>
                             <br>
                             <div class="form-group">
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
                                 <div class="col-md-8">
-                                  Contrasena:
-                                    <input id="password" name="password" type="password" class="form-control" required>
+                                  Contrasea:
+                                    <input id="password" name="password" value={{ user.password }} type="password" class="form-control" required>
                                 </div>
                             </div>
+                            <input type="hidden" name="id" id="id" value={{ user.id }}>
                             <br>
-                          
+
                             <div class="form-group">
                                 <div class="col-md-12 text-center">
                                     <button type="submit"  id='btnSubmit'>Modificar usuario</button>
