Se implementó la búsqueda de usuarios.

--- a/templates/users_index.html
+++ b/templates/users_index.html
@@ -5,8 +5,8 @@
 <table align="center">
   <tr>
     <td>
-      <form action="#" id="searchform">
-          <input type="text" placeholder="Buscar aqu&iacute;..." name="busqueda" id="busqueda" title="busqueda">
+      <form action="./?action=users_index" method="post" id="searchform">
+          <input type="text" placeholder="Buscar aqu&iacute;..." name="filter" id="filter">
           <button type= "submit" id='btnSubmit'> Buscar </button>
       </form>
     </td>
