--- a/templates/pacients_index.html
+++ b/templates/pacients_index.html
@@ -72,7 +72,7 @@
     </tr>
   </tfoot>
         {% for item in pacients%}
-            <tr> 
+            <tr>
             <td>{{ item.first_name }}</td>
             <td>{{ item.last_name }}</td>
             <td>{{ item.birth_date }}</td>
@@ -81,13 +81,13 @@
             <td>{{ item.dni }}</td>
             <td>{{ item.address }}</td>
             <td>{{ item.phone }}</td>
-            <td>  
+            <td>
               <form action="./?action=pacient_form_update" method="post">
-               <input type="submit" class="btn btn-success" name="id" value="Modificar - id: {{ item.id }}"> 
+               <input type="submit" class="btn btn-success" name="id" value="Modificar">
                <input type="hidden" name="id" id="id" value= "{{ item.id }}">
               </form>
             </td>
-            <td>  
+            <td>
               <form action="./?action=pacient_destroy" method="post">
               <input type="submit" class="btn btn-success" value="Eliminar" id="boton_borrar"/>
               </form>
