implementado modificar paciente

--- a/templates/pacient_form_update.html
+++ b/templates/pacient_form_update.html
@@ -11,7 +11,7 @@
             <div class="col-md-12">
                 <div class="well well-sm">
                         <fieldset>
-                            
+
                             <div class="form-group">
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
                                 <div class="col-md-8">
@@ -35,7 +35,7 @@
                                     <input id="fecha_de_nacimiento" name="birth_date" type="date" value=" {{ pacient.birth_date }}" class="form-control" required>
                                 </div>
                             </div>
-                    
+
                             <br>
                             <div class="form-group">
                                 <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
@@ -44,7 +44,7 @@
                                      <select name="gender" value="gender" required>
                                           <option value="F">Femenino</option>
                                           <option value="M">Masculino</option>
-                                    </select> 
+                                    </select>
                                 </div>
                             </div>
                             <br>
@@ -57,7 +57,7 @@
                                           <option value="Carnet de extranjeria">CARNET EXT.</option>
                                           <option value="Reg. unico de contribuyentes">RUC</option>
                                           <option value="Pasaporte">PASAPORTE</option>
-                                    </select> 
+                                    </select>
                                 </div>
                             </div>
                             <br>
@@ -95,9 +95,10 @@
                                           <option value="Osecac">OSECAC</option>
                                           <option value="Osde">OSDE</option>
                                           <option value="Medicus">Medicus</option>
-                                    </select> 
+                                    </select>
                                 </div>
                             </div>
+                            <input type="hidden" name="id" id="id" value={{ pacient.id }}>
                             <br>
 
                             <div class="form-group">
@@ -107,8 +108,8 @@
                                 </div>
                             </div>
                         </fieldset>
-                      
-                      
+
+
                     </form>
  </div>
  </td>
