--- a/templates/pacients_index.html
+++ b/templates/pacients_index.html
@@ -83,15 +83,16 @@
             <td>{{ item.phone }}</td>
             <td>  
               <form action="./?action=pacient_form_update" method="post">
-               <input type="submit" class="btn btn-success" name="id" value="Modificar - id: {{ item.id }}"> 
+               <input type="submit" class="btn btn-success" name="id" value="Modificar"> 
                <input type="hidden" name="id" id="id" value= "{{ item.id }}">
               </form>
             </td>
             <td>  
-              <form action="./?action=pacient_destroy" method="post">
-              <input type="submit" class="btn btn-success" value="Eliminar" id="boton_borrar"/>
-              </form>
-               </td>
+              <form action="./?action=pacient_destroyed" method="post">
+                 <input type="submit" onclick='return confirm("¿Estás seguro?")' class="btn btn-success" value="Eliminar" id="boton_borrar"/>
+                  <input type="hidden" name="id" id="id" value= "{{ item.id }}">
+               </form>
+             </td>
             </tr>
 
         {% endfor %}
