--- a/templates/pacient_destroyed.html
+++ b/templates/pacient_destroyed.html
@@ -5,7 +5,7 @@
 
 
 <div class="alert alert-success">
-	Se ha eliminado exitosamente el paciente. <a href="./?action=pacients_index"> Volver al listado de usuarios. </a>
+	Se ha eliminado exitosamente el paciente. <a href="./?action=pacients_index"> Volver al listado de pacientes. </a>
 </div>
 
 {% endblock %}
