Se agregó link para volver al listado de usuarios

--- a/templates/user_updated.html
+++ b/templates/user_updated.html
@@ -5,7 +5,7 @@
 
 
 <div class="alert alert-success">
-	Se han actualizado exitosamente los datos del usuario.
+	Se han actualizado exitosamente los datos del usuario. <a href="./?action=users_index"> Volver al listado de usuarios. </a>
 </div>
 
 {% endblock %}
