Se agregó link para volver al listado de pacientes

--- a/templates/pacient_updated.html
+++ b/templates/pacient_updated.html
@@ -5,7 +5,7 @@
 
 
 <div class="alert alert-success">
-	Se ha actualizado exitosamente los datos del paciente.
+	Se han actualizado exitosamente los datos del paciente. <a href="./?action=pacients_index"> Volver al listado de pacientes. </a>
 </div>
 
 {% endblock %}
