--- a/templates/plantilla_base.html
+++ b/templates/plantilla_base.html
@@ -30,6 +30,7 @@
 <footer class="bottom-page-footer">
     <hr class= "separatingStripe">
     <p class="left-footer-paragraph">Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez</p>
+    <a class="contact-mail" href="mailto:{{ config.contact_mail }}"> Mail de contacto </a>
     <p class="right-footer-paragraph">v 0.1.0</p>
 </footer>
     </body>
