Uso de bootstrap

--- a/templates/pacient_form_update.html
+++ b/templates/pacient_form_update.html
@@ -1,5 +1,9 @@
 {% extends 'plantilla_base.html' %}
 {% block title%} Pacientes {% endblock %}
+{% block nav %}
+ <a href="./?action=pacients_index" class='link1'>Volver al listado de pacientes.</a>
+ <a href="./?action=admin" class='link1'>Volver a Administración.</a>
+{% endblock %}
 {% block body%}
 
 
