--- a/templates/user_form_update.html
+++ b/templates/user_form_update.html
@@ -1,69 +1,52 @@
 {% extends 'plantilla_base.html' %}
+
+{% block dropdown %}
+<li><a href="./?action=users_index">Usuarios</a></li> 
+<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Administraci&oacute;n <span class="caret"></span></a>
+    <ul class="dropdown-menu">
+        <li><a href="./?action=users_index">Usuarios</a> </li>
+        <li><a href="#Roles">Roles</a> </li>
+        <li><a href="#Permisos">Permisos</a> </li>
+    </ul>
+</li> 
+{% endblock %}
+
 {% block body %}
+<div class="container">
+  <h2>Actualizar Usuario </h2>
+  <form action="./?action=user_updated" method="post">
 
-
-<div id="modificacion-user" align="center">
-  <h1> Actualizar Usuario </h1>
-   <form action="./?action=user_updated" class="form-horizontal" method="post">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="well well-sm">
-                        <fieldset>
-
-                            <div class="form-group">
-                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
-                                <div class="col-md-8">
-                                   Nombre:
-                                      <input id="first_name" name="first_name" value={{ user.first_name }} type="text" class="form-control" required>
-                                </div>
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
-                                <div class="col-md-8">
-                                  Apellido:
-                                    <input id="last_name" name="last_name" value={{ user.last_name }} type="text" class="form-control" required>
-                                </div>
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
-                                <div class="col-md-8">
-                                  E-mail:
-                                    <input id="email" name="email" value={{ user.email }} type="text" class="form-control" required>
-                                </div>
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
-                                <div class="col-md-8">
-                                  Usuario:
-                                    <input id="username" name="username" value={{ user.username }} type="text" class="form-control" required>
-                                </div>
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
-                                <div class="col-md-8">
-                                  Contrasea:
-                                    <input id="password" name="password" value={{ user.password }} type="password" class="form-control" required>
-                                </div>
-                            </div>
-                            <input type="hidden" name="id" id="id" value={{ user.id }}>
-                            <br>
-
-                            <div class="form-group">
-                                <div class="col-md-12 text-center">
-                                    <button type="submit"  id='btnSubmit'>Modificar usuario</button>
-                                </div>
-                            </div>
-                        </fieldset>
-                    </form>
-                </div>
-            </div>
-        </div>
+    <div class="form-group">
+      <label for="first_name">Nombre:</label>
+      <input type="text" class="form-control" id="first_name" placeholder="Nombre" name="first_name" value={{ user.first_name }} required  >
     </div>
-</form>
 
+    <div class="form-group">
+      <label for="last_name">Apellido:</label>
+      <input type="text" class="form-control" id="last_name" placeholder="Apellido" name="last_name" value={{ user.last_name }} required  >
+    </div>
+
+     <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" class="form-control" id="email" placeholder="E-mail" name="email" value={{ user.email }} required  >
+     </div> 
+
+    <div class="form-group">
+      <label for="username">Usuario:</label>
+      <input type="text" class="form-control" id="username" placeholder="Usuario" name="username" value={{ user.username }} required  >
+    </div> 
+
+    <div class="form-group">
+      <label for="pwd">Contrasena:</label>
+      <input type="password" class="form-control" id="password" placeholder="Enter password" name="password" value={{ user.password }}  required>
+      <input type="hidden" id='id' name='id' value={{ user.id }}> 
+    </div>
+    <button type="submit" class="btn btn-default">Modificar usuario</button>
+  </form>
+</div>
+
+
+<br>
+<br>
+<br>
 {% endblock %}
