Acomodo link de mail

--- a/templates/plantilla_base.html
+++ b/templates/plantilla_base.html
@@ -42,7 +42,7 @@
        
    <nav class="navbar navbar-inverse navbar-fixed-bottom">
     <p class="footer" align="center"> Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez - v 0.1.0</p>
-    <a class="contact-mail" href="mailto:{{ config.contact_mail }}"> Mail de contacto </a>
+    <p  align="center"> <a class="contact-mail"  href="mailto:{{ config.contact_mail }}"> Mail de contacto </a> </p>
   </nav>
 
 </body>
