Se creo controlador, modelo, y vista para el modulo de datos demograficos de pacientes. Se agrego un boton de datos demograficos en pacients_index.html.(Falta terminar)

--- a/templates/pacients_index.html
+++ b/templates/pacients_index.html
@@ -92,6 +92,12 @@
                  <input type="submit" onclick='return confirm("¿Estás seguro?")' class="btn btn-success" value="Eliminar" id="boton_borrar"/>
                   <input type="hidden" name="id" id="id" value= "{{ item.id }}">
                </form>
+               <td>  
+              <form action="./?action=pacient_demographic_data" method="post">
+                 <input type="submit" class="btn btn-success" value="Datos Demogr&aacute;ficos" id="boton_datos_demograficos"/>
+                  <input type="hidden" name="id" id="id" value= "{{ item.id }}">
+               </form>
+             </td>
              </td>
             </tr>
 
